--- a/static/css/main.css
+++ b/static/css/main.css
@@ -5,7 +5,8 @@
 }
 
 body {
-
+  background: #333;
+  color: #fff;
 };
 
 h1 {
@@ -24,4 +25,21 @@ h3 {
 
 p {
   line-height: 1.5;
+}
+
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.header {
+  display: none;
+  /* display: flex;
+  justify-content: space-between; */
+}
+
+.main {
+  width: 100vw;
+  height: 100vh;
 }
