--- a/site/_includes/components/navigation.njk
+++ b/site/_includes/components/navigation.njk
@@ -1,10 +1,10 @@
 {{ collections.all | eleventyNavigation | eleventyNavigationToHtml({
     listElement: "ul",
     listItemElement: "li",
-    listClass: "menu__list",
-    listItemClass: "menu__list-item",
+    listClass: "main-nav__list",
+    listItemClass: "main-nav__list-item",
     listItemHasChildrenClass: "has-children",
-    activeListItemClass: "menu__list-item--active",
+    activeListItemClass: "main-nav__list-item--active",
     activeKey: eleventyNavigation.key,
     showExcerpt: false
 }) | safe }}
