--- a/site/_sass/base/_typography.scss
+++ b/site/_sass/base/_typography.scss
@@ -1,25 +1,45 @@
 body {
     font-family: 'Lato', sans-serif;
+    font-size: 1.1rem;
+    font-weight: 300;
+}
+
+h1,
+h2,
+h3 {
+    font-weight: 400;
+}
+
+h1,
+h2 {
+    text-transform: uppercase;
 }
 
 h1 {
-    font-family: 'Permanent Marker', sans-serif;
-    font-size: 3rem;
+    font-size: 2rem;
     line-height: 1;
 }
 
 h2 {
-    font-family: 'Permanent Marker', sans-serif;
-    font-size: 2rem;
+    font-size: 1.75rem;
     line-height: 1.2;
 }
 
 h3 {
-    font-family: 'Permanent Marker', sans-serif;
     font-size: 1.5rem;
     line-height: 1.2;
 }
 
 p {
     line-height: 1.5;
+}
+
+button {
+    font-family: 'Lato';
+    font-size: 1.1rem;
+    font-weight: 400;
+}
+
+ul {
+    list-style-type: none;
 }
