--- a/site/_sass/components/_header.scss
+++ b/site/_sass/components/_header.scss
@@ -1,39 +1,60 @@
 .header {
+    display: none;
+    
     .menu {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-
+        padding: $spacing-base 0;
+        text-align: center;
+        
         .logo {
-            width: 5rem;
-            
-            a {
-                color: #fff;
-                text-decoration: none;
+            img {
+                width: 10rem;
             }
         }
 
-        &__list {
-            display: flex;
+        .main-nav {
+            &__list {
+                margin-top: 0.5rem;
+                display: flex;
+                justify-content: center;
 
-            list-style-type: none;
+                list-style-type: none;
 
-            &-item {
-                margin-left: 2rem;
-                padding: 1rem 0;
-                a {
-                    color: #fff;
-                    text-decoration: none;
+                &-item {
+                    margin: $spacing-base;
+                        a {
+                            padding: 0.5rem;
+                            color: $secondary;
+                            text-decoration: none;
+                            font-weight: 400;
 
-                    &:hover {
-                        text-decoration: underline;
+                            &:hover {
+                                border-bottom: 1px solid $secondary;
+                            }
+                        }
+
+                    &--active {
+                        a {
+                            border-bottom: 1px #ba09ff solid;
+                        
+                            &:hover {
+                                border-bottom: 1px #ba09ff solid;
+                            }
+                        }
                     }
                 }
+            }
+        }
+    }
 
-                &--active {
-                    a {
-                        color: red;
-                    }
+    @media (min-width: 48rem) {
+        .menu {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;           
+        
+            .main-nav {
+                &__list {
+                    margin-top: 0;
                 }
             }
         }
