--- a/site/work/index.njk
+++ b/site/work/index.njk
@@ -1,8 +1,45 @@
 ---
 layout: layouts/base.njk
+title: Work
 tags: false
 eleventyNavigation:
-  key: Work
+  key: work
   order: 2
-title: Coming soon!
 ---
+
+<section class="title">
+    <div class="title__container h-layout">
+        <h1>{{ title }}</h1>
+
+        <div class="bar">
+        </div>
+    </div>
+</section>
+
+<section class="projects">
+  <div class="h-layout">    
+    <ul class="projects__list">
+        {% for project in projects %}
+            <li class="card projects__list-item">
+                <div class="card__left">
+                  <a href="{{ projects.url }}">
+                    <img src="/static/images/{{ project.image }}" alt="thumbnail">
+                  </a>
+                </div>
+
+                <div class="card__right">
+                  <a href="{{ projects.url }}">
+                    <h3>{{ project.client }}</h3>
+                  </a>
+                  
+                  <p>{{ project.description }}</p>
+
+                  <a>
+                    <button class="btn-primary">Check out the details</button>
+                  </a>
+                </div>
+            </li>
+        {% endfor %}
+    </ul>
+  </div>
+</section>
