--- a/site/_sass/abstracts/_variables.scss
+++ b/site/_sass/abstracts/_variables.scss
@@ -3,15 +3,17 @@ Fonts
 */
 $primary: #212121;
 $secondary: #f4f4f4;
-$font-lg: 2rem;
-$font-md: 1.5rem;
-$font-sm: 1.25rem;
+$accent: #003fff;
+
 $font-base: 1rem;
+$font-sm: 1.25rem;
+$font-md: 1.5rem;
+$font-lg: 2rem;
 
 /*
 Spacing
 */
-$spacing-lg: 4rem;
-$spacing-md: 3rem;
-$spacing-sm: 2rem;
 $spacing-base: 1rem;
+$spacing-sm: 2rem;
+$spacing-md: 3rem;
+$spacing-lg: 4rem;
