--- a/site/_sass/components/_services.scss
+++ b/site/_sass/components/_services.scss
@@ -1,7 +1,7 @@
 .services {
   background: $secondary;
   color: $primary;
-  padding: $spacing-sm 0;
+  padding: $spacing-lg 0;
 
   text-align: center;
 
