--- a/site/contact/index.njk
+++ b/site/contact/index.njk
@@ -14,3 +14,34 @@ eleventyNavigation:
         </div>
     </div>
 </section>
+
+<section class="contact">
+  <div class="h-layout">
+    <div class="contact__img">
+      <img src="" alt="nicolas cnudde" />
+    </div>
+
+    <div class="contact__form">
+      <form action="/">
+        <div class="form__name">
+          <label for="name">Name</label>
+          <input type="text" name="name" id="name" required>
+        </div>
+
+        <div class="form__email">
+          <label for="email">Email</label>
+          <input type="email" name="email" id="email" required>
+        </div>
+
+        <div class="form__message">
+          <label for="message">Message</label>
+          <textarea name="message" id="" cols="30" rows="10" required></textarea>
+        </div>
+
+        <div class="form__submit">
+          <input class="btn-primary" type="submit" value="Send">
+        </div>
+      </form>
+    </div>
+  </div>
+</section>
