--- a/site/work/arne_quinze.njk
+++ b/site/work/arne_quinze.njk
@@ -1,3 +1,7 @@
 ---
-title: Work
+client: "Arne Quinze"
+url: "arne_quinze"
+image: "arne_quinze.png"
+description: "For @Work-1 we had to rebuild the original website of Belgian sculptor and painter Arne Quinze. He's "
+category: "HTML, CSS, JavaScript"
 ---
