--- a/site/work/heroma.njk
+++ b/site/work/heroma.njk
@@ -1,4 +1,7 @@
 ---
-layout: layouts/base.njk
-title: Work
+client: "Heroma"
+url: "heroma"
+image: "heroma.png"
+description: "Heroma is a Belgian company that specializes in decorating and furnishing company vehicles. Their previous site was outdated and they wanted a brand new custom design. Site was made in WordPress."
+category: "WordPress"
 ---
