--- a/site/_includes/layouts/base.njk
+++ b/site/_includes/layouts/base.njk
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="robots" content="noindex, nofollow" />
         <link rel="stylesheet" href="{{ '/static/css/main.css' | url }}">
+        <script src="https://kit.fontawesome.com/c8d1dd9982.js" crossorigin="anonymous"></script>
     </head>
 
     <body class="{{ templateClass }}"> 
