--- a/site/_includes/layouts/base.njk
+++ b/site/_includes/layouts/base.njk
@@ -18,6 +18,7 @@
 
         {% include "components/footer.njk" %}
 
+        <script src="{{ '/static/js/scroll-to-top.js' | url }}"></script>
         <script src="{{ '/static/js/main.js' | url }}"></script>
     </body>
 </html>
