--- a/site/_sass/abstracts/_variables.scss
+++ b/site/_sass/abstracts/_variables.scss
@@ -1,9 +1,9 @@
 /*
 Fonts
 */
-$primary: #212121;
+$primary: #222;
 $secondary: #f4f4f4;
-$accent: #003fff;
+$accent: #ba09ff;
 
 $font-base: 1rem;
 $font-sm: 1.25rem;
