--- a/site/_sass/components/_about.scss
+++ b/site/_sass/components/_about.scss
@@ -2,7 +2,7 @@
   margin-top: $spacing-sm;
 
   &__container {
-    height: 60vh;
+    height: 65vh;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -19,8 +19,11 @@
     margin: $spacing-sm 0;
   }
 
-  p {
+  > div { 
+    p {
     margin-top: $spacing-base;
+    text-align: center;
+  }
   }
 
   @media (min-width: 48rem) {
