--- a/site/work/arne_quinze.njk
+++ b/site/work/arne_quinze.njk
@@ -1,7 +1,9 @@
 ---
 client: "Arne Quinze"
-url: "arne_quinze"
 image: "arne_quinze.png"
-description: "For @Work-1 we had to rebuild the original website of Belgian sculptor and painter Arne Quinze. He's "
-category: "HTML, CSS, JavaScript"
+link: "https://pgmgent-2021-atwork1.github.io/atwork-1_project_3-pgm-nicolascnudde/"
+synopsis: "Arne Quinze is a Belgian conceptual artist best known for his unconventional and controversial public art installations. Quinze also creates large and small sculptures, drawings, and paintings. "
+description: "Arne Quinze is a Belgian conceptual artist best known for his unconventional and controversial public art installations. Quinze also creates large and small sculptures, drawings, and paintings. In his late teens, he started out as a graffiti artist in Brussels, and he never completed a formal art education."
+type: "University"
+technologies: "HTML5, CSS3, JavaScript"
 ---
