--- a/site/work/artemia_inve_aquaculture.njk
+++ b/site/work/artemia_inve_aquaculture.njk
@@ -1,6 +1,9 @@
 ---
 client: "Artemia by INVE Aquaculture"
 image: "artemia_inve_aquaculture.png"
-description: "INVE Aquaculture specializes in providing state-of-the-art solutions in three main domains that are essential to aquaculture production: optimization of animal nutrition, careful management of animal health and rigorous control of the culture environment. They wanted to promote their Artemia products, technologies and tools with having their own subsite. Designed from scratch in WordPress"
-category: "WordPress"
+link: "https://artemia.inveaquaculture.com/"
+synopsis: "Since its start in 1983, INVE Aquaculture has strived for innovation and offering the highest quality products in nutrition and health for fish and shrimp hatcheries and farms."
+description: "Since its start in 1983, INVE Aquaculture has strived for innovation and offering the highest quality products in nutrition and health for fish and shrimp hatcheries and farms. They specialize in providing solutions in three domains which are vital to aquaculture production, which are: optimization of animal nutrition, careful management of animal health and regorous control of the culture environment."
+type: "Freelance"
+technologies: "WordPress, PHP, Elementor, CSS3"
 ---
