--- a/site/work/ghent_festival.njk
+++ b/site/work/ghent_festival.njk
@@ -1,7 +1,9 @@
 ---
 client: "The Ghent Festival (Gentse Feesten)"
-url: "ghent_festival"
 image: "gentse_feesten.png"
-description: "For @Work-1 we had to rebuild the original site of the Ghent Festival. The site includes a program with the daily activities which data is dynamically loaded with the help of JavaScript"
-category: "HTML, CSS, JavaScript"
+link: "https://pgmgent-2021-atwork1.github.io/atwork-1_project_2-pgm-nicolascnudde/"
+synopsis: "The Gentse Feesten (\"The Ghent Festival\") is a music and theatre festival in the city of Ghent, Belgium. Besides stage events there are street acts such as mimes and buskers."
+description: "The Gentse Feesten (\"The Ghent Festival\") is a music and theatre festival in the city of Ghent, Belgium. Besides stage events there are street acts such as mimes and buskers. The festival starts on the Friday before the third Sunday of July and lasts until and including the fourth Sunday of July."
+type: "University"
+technologies: "HTML5, CSS3, JavaScript"
 ---
