--- a/site/work/heroma.njk
+++ b/site/work/heroma.njk
@@ -1,7 +1,9 @@
 ---
 client: "Heroma"
-url: "heroma"
 image: "heroma.png"
-description: "Heroma is a Belgian company that specializes in decorating and furnishing company vehicles. Their previous site was outdated and they wanted a brand new custom design. Site was made in WordPress."
-category: "WordPress"
+link: "https://www.heroma.be"
+synopsis: "Heroma is a Belgian company founded in 1962 that specializes in decorating company vehicles. This family company has their own range of basic products but also offers customized services."
+description: "Heroma is a Belgian company founded in 1962 that specializes in decorating company vehicles. This family company has their own range of basic products but also offers customized services. Other than that, they also offer special modifications to vehicles for security services and utility companies."
+type: "Freelance"
+technologies: "WordPress, PHP, Elementor"
 ---
