--- a/site/work/index.njk
+++ b/site/work/index.njk
@@ -28,13 +28,13 @@ eleventyNavigation:
                 </div>
 
                 <div class="card__right">
-                  <a href="{{ work.data.url }}">
+                  <a href="{{ work.url }}">
                     <h3>{{ work.data.client }}</h3>
                   </a>
                   
-                  <p>{{ work.data.description }}</p>
+                  <p>{{ work.data.synopsis }}</p>
 
-                  <a href="{{ work.data.url }}">
+                  <a href="{{ work.url }}">
                     <button class="btn-primary">Check out the details</button>
                   </a>
                 </div>
