--- a/site/_sass/components/_footer.scss
+++ b/site/_sass/components/_footer.scss
@@ -3,6 +3,7 @@ footer {
 }
 
 .footer {
+    margin-top: $spacing-lg;
     padding: $spacing-sm 0;
     text-align: center;
 
@@ -10,6 +11,25 @@ footer {
         margin-top: 0.5rem;
         .fa-heart {
             color: #f1403c;
+        }
+    }
+    .scroll-to-top {
+        #scrollToTopBtn {
+            display: none;
+        }
+
+        @media (min-width: 64rem) {
+            #scrollToTopBtn {
+                display: block;
+                position: fixed;
+                right: 1rem;
+                bottom: 1rem;
+                width: 3rem;
+                height: 3rem;
+                border: 1px solid $primary;
+                border-radius: 10px;
+                cursor: pointer;    
+            }
         }
     }
 }
