--- a/site/_static/css/main.css
+++ b/site/_static/css/main.css
@@ -64,7 +64,7 @@ Components
   margin-top: 2rem;
 }
 .about__container {
-  height: 60vh;
+  height: 65vh;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -78,8 +78,9 @@ Components
   flex-basis: 100%;
   margin: 2rem 0;
 }
-.about p {
+.about > div p {
   margin-top: 1rem;
+  text-align: center;
 }
 @media (min-width: 48rem) {
   .about p {
@@ -108,7 +109,7 @@ Components
 }
 .btn-primary:hover {
   background: #f4f4f4;
-  color: #212121;
+  color: #222;
 }
 
 footer {
@@ -116,6 +117,7 @@ footer {
 }
 
 .footer {
+  margin-top: 4rem;
   padding: 2rem 0;
   text-align: center;
 }
@@ -124,6 +126,22 @@ footer {
 }
 .footer .made-by .fa-heart {
   color: #f1403c;
+}
+.footer .scroll-to-top #scrollToTopBtn {
+  display: none;
+}
+@media (min-width: 64rem) {
+  .footer .scroll-to-top #scrollToTopBtn {
+    display: block;
+    position: fixed;
+    right: 1rem;
+    bottom: 1rem;
+    width: 3rem;
+    height: 3rem;
+    border: 1px solid #222;
+    border-radius: 10px;
+    cursor: pointer;
+  }
 }
 
 .header .menu {
@@ -154,10 +172,7 @@ footer {
   --d: 100%;
 }
 .header .menu .main-nav__list-item--active a {
-  background: linear-gradient(#003fff 0 0) 0 100%/var(--d, 100%) 2px no-repeat;
-}
-.header .menu .main-nav__list-item--active a:hover {
-  background: linear-gradient(#003fff 0 0) 0 100%/var(--d, 100%) 2px no-repeat;
+  background: linear-gradient(#ba09ff 0 0) 0 100%/var(--d, 100%) 2px no-repeat;
 }
 @media (min-width: 48rem) {
   .header .menu {
@@ -182,13 +197,20 @@ footer {
 .reflections__list-item {
   margin-top: 2rem;
 }
+.reflections__list-item .question,
+.reflections__list-item .answer {
+  margin-top: 1rem;
+}
+.reflections__list-item .question {
+  font-weight: 500;
+}
 .reflections__list-item h3 {
   margin: 1rem 0;
 }
 
 .services {
   background: #f4f4f4;
-  color: #212121;
+  color: #222;
   padding: 4rem 0;
   text-align: center;
 }
@@ -231,7 +253,7 @@ footer {
   transform: translateY(0);
 }
 .socials__list > li a i:hover {
-  color: #003fff;
+  color: #ba09ff;
   transform: translateY(-10%);
 }
 .socials__list > li:last-child {
@@ -275,7 +297,7 @@ Layout
 */
 .mailchimp {
   background: #f4f4f4;
-  color: #212121;
+  color: #222;
   padding-bottom: 3rem;
 }
 .mailchimp .h-layout {
@@ -285,7 +307,7 @@ Layout
   margin-top: 3rem;
 }
 .mailchimp img {
-  border: 1px solid #212121;
+  border: 1px solid #222;
   width: 100%;
 }
 .mailchimp p {
@@ -325,6 +347,17 @@ Layout
 /*
 Pages
 */
+.contact p {
+  margin-top: 1rem;
+  font-size: 1.25rem;
+  width: 75%;
+}
+.contact p:first-child {
+  margin-top: 3rem;
+}
+.contact form {
+  margin-top: 3rem;
+}
 .contact form label {
   width: 100%;
   display: block;
@@ -333,6 +366,7 @@ Pages
 .contact form input[type=text],
 .contact form input[type=email],
 .contact form textarea {
+  font-family: "Lato", sans-serif;
   margin-top: 0.5rem;
   width: 100%;
   padding: 1rem;
@@ -351,6 +385,20 @@ Pages
 }
 .contact form .form__submit input {
   padding: 1rem;
+  font-size: 1.1rem;
+}
+.contact__alt {
+  margin-top: 0.5rem;
+  font-size: 1.25rem;
+  transform: translateX(0);
+  transition: all 0.4s ease;
+}
+.contact__alt:hover {
+  transform: translateX(1rem);
+}
+.contact__alt a {
+  margin-left: 0.25rem;
+  color: #f4f4f4;
 }
 
 .project img {
@@ -360,14 +408,31 @@ Pages
   max-width: 50rem;
 }
 .project__content img {
-  margin-top: 7rem;
+  margin-top: 4rem;
+}
+.project__content h2 {
+  margin-top: 3rem;
+}
+@media (min-width: 48rem) {
+  .project__content h2 {
+    margin-top: 2rem;
+  }
+}
+.project__content p {
+  margin-top: 1rem;
+}
+.project__content .p--tech {
+  margin-top: 0.5rem;
+}
+.project__content .visit-website button {
+  margin-top: 2rem;
 }
 
 .projects__list {
   margin-top: 4rem;
 }
 .projects__list-item {
-  margin: 7rem 0;
+  margin-top: 7rem;
 }
 .projects__list-item img {
   width: 90%;
@@ -426,7 +491,7 @@ Themes
 }
 
 body {
-  background: #212121;
+  background: #222;
   color: #f4f4f4;
 }
 
