--- a/site/contact/index.njk
+++ b/site/contact/index.njk
@@ -17,31 +17,47 @@ eleventyNavigation:
 
 <section class="contact">
   <div class="h-layout">
-    <div class="contact__img">
-      <img src="" alt="nicolas cnudde" />
+    <div>
+      <p>Thank you for reaching out to me.</p>
+    
+      <p>Please fill in the form below and I'll get back to you as soon as possible!</p>
     </div>
 
-    <div class="contact__form">
-      <form action="/">
-        <div class="form__name">
-          <label for="name">Name</label>
-          <input type="text" name="name" id="name" required>
-        </div>
+    <form action="/">
+      <div class="form__name">
+        <label for="name">Name</label>
+        <input type="text" name="name" id="name" required>
+      </div>
 
-        <div class="form__email">
-          <label for="email">Email</label>
-          <input type="email" name="email" id="email" required>
-        </div>
+      <div class="form__email">
+        <label for="email">Email</label>
+        <input type="email" name="email" id="email" required>
+      </div>
 
-        <div class="form__message">
-          <label for="message">Message</label>
-          <textarea name="message" id="" cols="30" rows="10" required></textarea>
-        </div>
+      <div class="form__message">
+        <label for="message">Message</label>
+        <textarea name="message" id="" cols="30" rows="10" required></textarea>
+      </div>
 
-        <div class="form__submit">
-          <input class="btn-primary" type="submit" value="Send">
-        </div>
-      </form>
+      <div class="form__submit">
+        <input class="btn-primary" type="submit" value="Send">
+      </div>
+    </form>
+
+    <div>
+      <p>You could also contact me at:</p>
+
+      <div class="contact__alt">
+        <i class="fas fa-envelope"></i>
+        
+        <a href="mailto:hello@nicolascnudde.be">hello@nicolascnudde.be</a> 
+      </div>
+
+      <div class="contact__alt">
+        <i class="fas fa-phone"></i>
+        
+        <a href="tel:+32487364219">+32 487 36 42 19</a>
+      </div>
     </div>
   </div>
 </section>
