--- a/site/index.njk
+++ b/site/index.njk
@@ -22,7 +22,7 @@ eleventyNavigation:
 
             <h3>Hello, I'm Nicolas. Nice to meet you.</h3>
 
-            <p>I am currently a student at the Artevelde University of Applied Sciences where I'm in the middle of getting my Associate Degree in Programming.</p>
+            <p>I am currently a student at the Artevelde University of Applied Sciences where I'm getting my Associate Degree in Programming.</p>
             
             <p>I have a serious passion for designing and developing web applications.</p>
 
