--- a/docs/static/css/main.css
+++ b/docs/static/css/main.css
@@ -133,6 +133,7 @@ footer {
 @media (min-width: 64rem) {
   .footer .scroll-to-top #scrollToTopBtn {
     display: block;
+    background: #f4f4f4;
     position: fixed;
     right: 1rem;
     bottom: 1rem;
