--- a/site/_sass/components/_footer.scss
+++ b/site/_sass/components/_footer.scss
@@ -21,6 +21,7 @@ footer {
         @media (min-width: 64rem) {
             #scrollToTopBtn {
                 display: block;
+                background: $secondary;
                 position: fixed;
                 right: 1rem;
                 bottom: 1rem;
