--- a/site/index.njk
+++ b/site/index.njk
@@ -153,14 +153,16 @@ eleventyNavigation:
                 <p class="answer">A: So far I've been using Visual Studio Code for programming in HTML, CSS, JavaScript, React, NodeJS, 11ty, SASS, Nunjucks... you name it. Whatever code I write, it's in VSC.</p>
                 
                 <p class="answer">Other than that I've used other programs such as Adobe XD to make high fidelity wireframes, visual designs and design systems, MySQL to interact with databases that will contain data later to be used on a website, browsers such as Chrome and Firefox Developer Edition to help with debugging my code, and eventually when I want to share my work and projects, I push my code to GitHub so that other developers can see my creations.</p>
+
+                <p class="answer">Last but not least, recently I had to do an assignment where I had to send out a mailing and collect data using the popular marketing tool Mailchimp. The recap of my assignment can be found <a href="work/mailchimp">right here</a>.</p>
             </li>
 
             <li class="reflections__list-item">
                 <p class="question">Q: Which tools would I like to use in the future and why?</p>
 
-                <p class="answer">A: Definitely the same ones as I mentioned above. For UI/UX I would love to start working with both Figma and Sketch, as I've heard they are both amazing tools to use. Other than NodeJS, we haven't seen any other back-end frameworks, so I'm a curious what Laravel (PHP) has to offer.</p>
+                <p class="answer">A: Definitely the same ones as I mentioned above. For UI/UX I would love to start working with both Figma and Sketch, as I've heard they are both amazing tools to use. Other than NodeJS, I haven't seen any other back-end frameworks, so I'm a curious what Laravel (PHP) has to offer.</p>
                 
-                <p class="answer">As far as front-end frameworks go, we've been working in React for our final project for Programming 4, and I'm very impressed by it. Other than that, I've heard that Svelte is getting more popular each day, and I'd like to explore it more.</p>
+                <p class="answer">As far as front-end frameworks go, I've been working in React for my final project for Programming 4, and I'm very impressed by it. Other than that, I've heard that Svelte is getting more popular each day, and I'd like to explore it more.</p>
             </li>
         </ul>
     </div>
