--- a/site/work/mailchimp.njk
+++ b/site/work/mailchimp.njk
@@ -1,11 +1,15 @@
 ---
 tags: false
+title: "Opdracht: Mailchimp"
 layout: layouts/base.njk
 ---
 <div class="mailchimp">
-    <section class="mailchimp__title">
-        <div class="h-layout">
-            <h1>Opdracht 8: Mailchimp</h1>
+    <section class="title">
+        <div class="title__container h-layout">
+            <h1>{{ title }}</h1>
+
+            <div class="bar">
+            </div>
         </div>
     </section>
 
