--- a/site/_static/css/main.css
+++ b/site/_static/css/main.css
@@ -205,6 +205,9 @@ footer {
 .reflections__list-item .question {
   font-weight: 500;
 }
+.reflections__list-item .answer a {
+  color: #f4f4f4;
+}
 .reflections__list-item h3 {
   margin: 1rem 0;
 }
@@ -296,11 +299,6 @@ footer {
 /*
 Layout
 */
-.mailchimp {
-  background: #f4f4f4;
-  color: #222;
-  padding-bottom: 3rem;
-}
 .mailchimp .h-layout {
   max-width: 50rem;
 }
@@ -343,6 +341,19 @@ Layout
   margin: 0 auto;
   width: 25%;
   border: none;
+}
+.mailchimp .intro {
+  margin-bottom: 3rem;
+}
+.mailchimp .mailing,
+.mailchimp .survey {
+  padding-top: 3rem;
+  margin-top: 0;
+  background: #f4f4f4;
+  color: #222;
+}
+.mailchimp .survey {
+  padding-bottom: 3rem;
 }
 
 /*
